--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,7 @@ description:         Please see the README on Github at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- hspec
 
 library:
   source-dirs: src
@@ -46,3 +47,4 @@ tests:
     - -with-rtsopts=-N
     dependencies:
     - sudoku-engine
+    - hspec
